project structure, web-components navigation-menu & footer-link

--- a/index.html
+++ b/index.html
@@ -5,48 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dengue Website</title>
-  <link rel="icon" type="image/png" href="img/icon.png">
+  <link rel="icon" type="image/png" href="resources/img/icon.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="resources/css/styles.css">
 </head>
 
 <body>
 
-  <!-- burger button -->
-  <div class="menu-btn">
-    <i class="fas fa-bars fa-2x"></i>
-  </div>
-
   <div class="container">
+
     <!-- navigation -->
-    <nav class="nav-main">
-
-      <!-- logo -->
-      <img src="img/brand.png" alt="TechNews Logo" class="nav-brand">
-      
-      <!-- navigation menu -->
-      <ul class="nav-menu">
-        <li><a href="./test">Auto-Test</a></li>
-        <li><a href="./hospitales">Hospitales</a></li>
-        <li><a href="./mapa">Mapa de Calor</a></li>
-        <li><a href="./noticias">Noticias</a></li>
-        <li><a href="./prevencion">Prevención</a></li>
-        <li><a href="./sintomas">Síntomas</a></li>
-        <li><a href="./telefonos">Tel. Utiles</a></li>
-        <li><a href="./tratamientos">Tratamientos</a></li>
-      </ul>
-
-      <!-- search -->
-      <ul class="nav-menu-right">
-        <li>
-          <a href="#">
-            <i class="fas fa-search"></i>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <hr>
+    <navigation-menu></navigation-menu>
 
     <!-- showcase -->
     <header class="showcase">
@@ -59,23 +29,23 @@
     <!-- news cards 01 -->
     <div class="news-cards">
       <div>
-        <img src="img/news-01.jpg" alt="" />
+        <img src="resources/img/news-01.jpg" alt="" />
         <h3>Noticia #01</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>
         <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="img/news-02.jpg" alt="" />
+        <img src="resources/img/news-02.jpg" alt="" />
         <h3>Noticia #02</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="img/news-03.jpg" alt="" />
+        <img src="resources/img/news-03.jpg" alt="" />
         <h3>Noticia #03</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="img/news-04.jpg" alt="" />
+        <img src="resources/img/news-04.jpg" alt="" />
         <h3>Noticia #04</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
@@ -93,22 +63,22 @@
     <!-- news cards 02 -->
     <div class="news-cards">
       <div>
-        <img src="img/news-05.jpg" alt="" />
+        <img src="resources/img/news-05.jpg" alt="" />
         <h3>Noticia #05</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="img/news-06.jpg" alt="" />
+        <img src="resources/img/news-06.jpg" alt="" />
         <h3>Noticia #06</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="img/news-07.jpg" alt="" />
+        <img src="resources/img/news-07.jpg" alt="" />
         <h3>Noticia #07</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="img/news-08.jpg" alt="" />
+        <img src="resources/img/news-08.jpg" alt="" />
         <h3>Noticia #08</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
@@ -123,37 +93,18 @@
       </div>
     </section>
 
+    <!-- footer -->
+    <footer-links></footer-links>
 
-  <!-- footer links -->
-  <div class="footer-links">
-
-    <div class="footer-title">
-      <h2>Mapa de Links</h2>
-    </div>
-
-    <div class="footer-container">
-      <p><a href="./test">Auto-Test</a></p>
-      <p><a href="./hospitales">Hospitales</a></p>
-      <p><a href="./mapa">Mapa de Calor</a></p>
-      <p><a href="./noticias">Noticias</a></p>
-      <p><a href="./prevencion">Prevención</a></p>
-      <p><a href="./sintomas">Síntomas</a></p>
-      <p><a href="./telefonos">Teléfonos Utiles</a></p>
-      <p><a href="./tratamientos">Tratamientos</a></p>
-    </div>
   </div>
 
-  <!-- footer copyright -->
-  <footer class="footer-copyright">
-    <span>Copyright</span>
-    <i class="far fa-copyright"></i>
-    <span>2020 - Desarrollo de un Proyecto, CAECE</span>   
-  </footer>
+  <!-- scroll reveal library -->
+  <script src="resources/js/scrollreveal.4.0.6.js"></script>
 
-  <!-- scroll reveal -->
-  <script src="js/scrollreveal.4.0.6.js"></script>
-  <!-- main javascript -->
-  <script src="js/scripts.js"></script>
+  <!-- custom javascript -->
+  <script src="resources/js/navigation-menu.js"></script>
+  <script src="resources/js/footer-links.js"></script>
+  <script src="resources/js/scripts.js"></script>
 
 </body>
 </html>
