project structure resources/webcomponents

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
   <script src="resources/js/scrollreveal.4.0.6.js"></script>
 
   <!-- custom javascript -->
-  <script src="resources/js/navigation-menu.js"></script>
-  <script src="resources/js/footer-links.js"></script>
-  <script src="resources/js/scripts.js"></script>
+  <script src="/resources/js/scripts.js"></script>
+  <script src="/resources/webcomponents/navigation-menu.js"></script>
+  <script src="/resources/webcomponents/footer-links.js"></script>
 
 </body>
 </html>
