--- a/hospitales/hospitales.html
+++ b/hospitales/hospitales.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dengue Website</title>
-  <link rel="icon" type="image/png" href="../resources/img/icon.png">
+  <link rel="icon" type="image/png" href="/resources/img/icon.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link rel="stylesheet" href="../resources/css/styles.css">
+  <link rel="stylesheet" href="/resources/css/styles.css">
 </head>
 
 <body>
@@ -27,9 +27,9 @@
   </div>
 
     <!-- custom javascript -->
-    <script src="../resources/js/navigation-menu.js"></script>
-    <script src="../resources/js/footer-links.js"></script>
-    <script src="../resources/js/scripts.js"></script>
+    <script src="/resources/js/scripts.js"></script>
+    <script src="/resources/webcomponents/navigation-menu.js"></script>
+    <script src="/resources/webcomponents/footer-links.js"></script>
 
 </body>
 </html>
