--- a/noticias/noticia.html
+++ b/noticias/noticia.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dengue Website</title>
-  <link rel="icon" type="image/png" href="/resources/img/icon.png">
+  <link rel="icon" type="image/png" href="../resources/img/icon.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="/resources/css/styles.css">
@@ -19,7 +19,7 @@
     <navigation-menu></navigation-menu>
 
     <!-- content -->
-    <span>prevencion content</span>
+    <span>noticia content</span>
 
     <!-- footer -->
     <footer-links></footer-links>
