adding news main-page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dengue Website</title>
-  <link rel="icon" type="image/png" href="resources/img/icon.png">
+  <link rel="icon" type="image/png" href="/resources/img/icon.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link rel="stylesheet" href="resources/css/styles.css">
+  <link rel="stylesheet" href="/resources/css/styles.css">
 </head>
 
 <body>
@@ -29,25 +29,28 @@
     <!-- news cards 01 -->
     <div class="news-cards">
       <div>
-        <img src="resources/img/news-01.jpg" alt="" />
+        <img src="/resources/img/news-01.jpg" alt="" />
         <h3>Noticia #01</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>
         <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="resources/img/news-02.jpg" alt="" />
+        <img src="/resources/img/news-02.jpg" alt="" />
         <h3>Noticia #02</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>
+        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="resources/img/news-03.jpg" alt="" />
+        <img src="/resources/img/news-03.jpg" alt="" />
         <h3>Noticia #03</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>
+        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="resources/img/news-04.jpg" alt="" />
+        <img src="/resources/img/news-04.jpg" alt="" />
         <h3>Noticia #04</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>
+        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
     </div>
 
@@ -63,24 +66,28 @@
     <!-- news cards 02 -->
     <div class="news-cards">
       <div>
-        <img src="resources/img/news-05.jpg" alt="" />
+        <img src="/resources/img/news-05.jpg" alt="" />
         <h3>Noticia #05</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>
+        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="resources/img/news-06.jpg" alt="" />
+        <img src="/resources/img/news-06.jpg" alt="" />
         <h3>Noticia #06</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>
+        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="resources/img/news-07.jpg" alt="" />
+        <img src="/resources/img/news-07.jpg" alt="" />
         <h3>Noticia #07</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>
+        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="resources/img/news-08.jpg" alt="" />
+        <img src="/resources/img/news-08.jpg" alt="" />
         <h3>Noticia #08</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolor optio, expedita doloribus eligendi ipsa quam quia, cupiditate ullam amet voluptatum aut sed! Blanditiis eos tenetur quidem rerum unde repudiandae!</p>
+        <a href="#">Saber Mas<i class="fas fa-chevron-right"></i></a>
       </div>
     </div>
 
@@ -102,7 +109,7 @@
   <script src="resources/js/scrollreveal.4.0.6.js"></script>
 
   <!-- custom javascript -->
-  <script src="/resources/js/scripts.js"></script>
+  <script src="/index.js"></script>
   <script src="/resources/webcomponents/navigation-menu.js"></script>
   <script src="/resources/webcomponents/footer-links.js"></script>
 
