--- a/noticias/noticia.html
+++ b/noticias/noticia.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="/resources/css/styles.css">
+  <link rel="stylesheet" href="/noticias/noticias.css">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <navigation-menu></navigation-menu>
 
     <!-- content -->
-    <span>noticia content</span>
+    <div id="content">noticia content</div>
 
     <!-- footer -->
     <footer-links></footer-links>
@@ -27,7 +28,7 @@
   </div>
 
     <!-- custom javascript -->
-    <script src="/resources/js/scripts.js"></script>
+    <script src="/noticias/noticia.js"></script>
     <script src="/resources/webcomponents/navigation-menu.js"></script>
     <script src="/resources/webcomponents/footer-links.js"></script>
 
