--- a/tratamientos/tratamientos.html
+++ b/tratamientos/tratamientos.html
@@ -19,7 +19,7 @@
     <navigation-menu></navigation-menu>
 
     <!-- content -->
-    <span>tratamientos content</span>
+    <div id="content">tratamientos content</div>
 
     <!-- footer -->
     <footer-links></footer-links>
@@ -27,7 +27,6 @@
   </div>
 
     <!-- custom javascript -->
-    <script src="/resources/js/scripts.js"></script>
     <script src="/resources/webcomponents/navigation-menu.js"></script>
     <script src="/resources/webcomponents/footer-links.js"></script>
 
