improvements on noticia/id & noticias pages

--- a/noticias/noticias.html
+++ b/noticias/noticias.html
@@ -20,7 +20,7 @@
     <navigation-menu></navigation-menu>
 
     <!-- content -->
-    <div id="content"></div>
+    <div id="content">cargando...</div>
 
     <!-- footer -->
     <footer-links></footer-links>
@@ -29,6 +29,7 @@
 
     <!-- custom javascript -->
     <script src="/noticias/noticias.js"></script>
+    <script src="/resources/js/utils.js"></script>
     <script src="/resources/webcomponents/navigation-menu.js"></script>
     <script src="/resources/webcomponents/footer-links.js"></script>
 
