--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
   <!-- custom javascript -->
   <script src="/index.js"></script>
+  <script src="/resources/js/utils.js"></script>
   <script src="/resources/webcomponents/navigation-menu.js"></script>
   <script src="/resources/webcomponents/footer-links.js"></script>
 
