--- a/noticias/noticias.html
+++ b/noticias/noticias.html
@@ -8,8 +8,8 @@
   <link rel="icon" type="image/png" href="../resources/img/icon.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link rel="stylesheet" href="/resources/css/styles.css">
-  <link rel="stylesheet" href="/noticias/noticias.css">
+  <link rel="stylesheet" href="../resources/css/styles.css">
+  <link rel="stylesheet" href="./noticias.css">
 </head>
 
 <body>
@@ -28,10 +28,10 @@
   </div>
 
     <!-- custom javascript -->
-    <script src="/noticias/noticias.js"></script>
-    <script src="/resources/js/utils.js"></script>
-    <script src="/resources/webcomponents/navigation-menu.js"></script>
-    <script src="/resources/webcomponents/footer-links.js"></script>
+    <script src="../resources/webcomponents/navigation-menu.js"></script>
+    <script src="../resources/webcomponents/footer-links.js"></script>
+    <script src="../resources/js/utils.js"></script>
+    <script src="./noticias.js"></script>
 
 </body>
 </html>
