add scroll-reveal on news page

--- a/noticias/noticias.html
+++ b/noticias/noticias.html
@@ -21,11 +21,18 @@
 
     <!-- content -->
     <div id="content">cargando...</div>
+    <div class="news-pager">
+      <a href="#" id="btn-next" class="btn">Entradas más antiguas<i class="fas fa-chevron-right"></i></a>
+      <a href="#" id="btn-prev" class="btn"><i class="fas fa-chevron-left"></i>Entradas más recientes</a>
+    </div>
 
     <!-- footer -->
     <footer-links></footer-links>
 
   </div>
+
+    <!-- scroll reveal library -->
+    <script src="../resources/js/scrollreveal.4.0.6.js"></script>
 
     <!-- custom javascript -->
     <script src="../resources/webcomponents/navigation-menu.js"></script>
