add social-share webcomponent, update site style for readability

--- a/hospitales/hospitales.html
+++ b/hospitales/hospitales.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dengue Website</title>
+  <title>Hospitales | Dengue</title>
   <link rel="icon" type="image/png" href="../resources/img/icon.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -21,6 +21,9 @@
     <!-- content -->
     <div id="content">N/A</div>
 
+    <!-- share content -->
+    <social-networks-share></social-networks-share>
+
     <!-- footer -->
     <footer-links></footer-links>
 
@@ -28,6 +31,7 @@
 
     <!-- custom javascript -->
     <script src="../resources/webcomponents/navigation-menu.js"></script>
+    <script src="../resources/webcomponents/social-networks-share.js"></script>
     <script src="../resources/webcomponents/footer-links.js"></script>
 
 </body>
