--- a/noticias/noticia.html
+++ b/noticias/noticia.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dengue Website</title>
+  <title>Noticias | Dengue</title>
   <link rel="icon" type="image/png" href="../resources/img/icon.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -22,6 +22,9 @@
     <!-- content -->
     <div id="content">cargando...</div>
 
+    <!-- share content -->
+    <social-networks-share></social-networks-share>
+
     <!-- footer -->
     <footer-links></footer-links>
 
@@ -29,6 +32,7 @@
 
     <!-- custom javascript -->
     <script src="../resources/webcomponents/navigation-menu.js"></script>
+    <script src="../resources/webcomponents/social-networks-share.js"></script>
     <script src="../resources/webcomponents/footer-links.js"></script>
     <script src="../resources/js/utils.js"></script>
     <script src="./noticia.js"></script>
