--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dengue Website</title>
-    <meta http-equiv = "refresh" content = "0; url = home/index.html" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dengue</title>
+  <meta http-equiv = "refresh" content = "0; url = home/index.html" />
 </head>
 <body>
-    
-</body>
 </html>
