adding google-maps integration

--- a/mapa/mapa.html
+++ b/mapa/mapa.html
@@ -21,10 +21,13 @@
 
     <!-- content -->
     <div class="card">
-      <span>Total de casos:</span>
-      <span id="stats"></span>
+      <span>
+        <span>Total de casos:</span>
+        <span id="stats"></span>
+      </span>
+      <button onclick="toggleHeatmap()">Mapa de Calor</button>
     </div>
-    
+
     <div id="map"></div>
 
     <div class="source">Fuente:
@@ -39,11 +42,11 @@
 
   </div>
 
-    <!-- custom javascript -->
-    <script src="../resources/webcomponents/navigation-menu.js"></script>
-    <script src="../resources/webcomponents/social-networks-share.js"></script>
-    <script src="../resources/webcomponents/footer-links.js"></script>
-    <script src="../resources/js/utils.js"></script>
-    <script src="./mapa.js"></script>
+  <!-- custom javascript -->
+  <script src="../resources/webcomponents/navigation-menu.js"></script>
+  <script src="../resources/webcomponents/social-networks-share.js"></script>
+  <script src="../resources/webcomponents/footer-links.js"></script>
+  <script src="../resources/js/utils.js"></script>
+  <script src="./mapa.js"></script>
 </body>
 </html>
