--- a/hospitales/hospitales.html
+++ b/hospitales/hospitales.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="../resources/css/styles.css">
+  <link rel="stylesheet" href="./hospitales.css">
 </head>
 
 <body>
@@ -19,7 +20,42 @@
     <navigation-menu></navigation-menu>
 
     <!-- content -->
-    <div id="content">N/A</div>
+    <div id="content">
+      <h2>Buscador de Hospitales</h2>
+      <div class="mapSelector">
+        <select id="provinceSelect" name='selectHospitales' class="select" onchange="selectProvince()">
+          <option value='' selected disabled hidden>Seleccione su provincia</option>
+          <option value='1'>Buenos Aires</option>
+          <option value='2'>Capital Federal</option>
+          <option value='3'>Catamarca</option>
+          <option value='4'>Chaco</option>
+          <option value='5'>Chubut</option>
+          <option value='6'>Córdoba</option>
+          <option value='7'>Corrientes</option>
+          <option value='8'>Entre Ríos</option>
+          <option value='9'>Formosa</option>
+          <option value='10'>Jujuy</option>
+          <option value='11'>La Pampa</option>
+          <option value='12'>La Rioja</option>
+          <option value='13'>Mendoza</option>
+          <option value='14'>Misiones</option>
+          <option value='15'>Neuquén</option>
+          <option value='16'>Río Negro</option>
+          <option value='17'>Salta</option>
+          <option value='18'>San Juan</option>
+          <option value='19'>San Luis</option>
+          <option value='20'>Santa Cruz</option>
+          <option value='21'>Santa Fe</option>
+          <option value='22'>Santiago del Estero</option>
+          <option value='23'>Tierra del fuego</option>
+          <option value='24'>Tucumán</option>
+        </select>
+
+        <div id="results"></div>
+
+        <div id="map"></div>
+      </div>
+    </div>
 
     <!-- share content -->
     <social-networks-share></social-networks-share>
@@ -33,6 +69,8 @@
     <script src="../resources/webcomponents/navigation-menu.js"></script>
     <script src="../resources/webcomponents/social-networks-share.js"></script>
     <script src="../resources/webcomponents/footer-links.js"></script>
+    <script src="../resources/js/utils.js"></script>
+    <script src="./hospitales.js"></script>
 
 </body>
 </html>
