--- a/nosotros/nosotros.html
+++ b/nosotros/nosotros.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="section-bar">
-        <p>Profesora</p>
+        <p>Nosotros</p>
       </div>
 
       <div class="members">
@@ -43,15 +43,6 @@
           <p class="name">Abeledo, María Claudia</p>
           <p class="position">Infraestructura</p>
         </div>
-
-      </div>
-
-      <div class="section-bar">
-        <p>Alumnos</p>
-      </div>
-
-      <div class="members">
-
         <div class="card">
           <img src="../resources/img/integrantes/mauricio-burruso.jpg" alt="Integrantes">
           <p class="name">Burruso, Mauricio</p>
