remove profiel questions from autotest

--- a/autotest/autotest.html
+++ b/autotest/autotest.html
@@ -30,7 +30,7 @@
         <button id="card-btn" class="btn" onclick="nextQuestion(this)">Siguiente <i class="fas fa-chevron-right"></i></button>
       </div>
   
-      <div class="tile bg-one" data-question="1" onclick="showQuestion(this.dataset.question)">
+      <!--<div class="tile bg-one" data-question="1" onclick="showQuestion(this.dataset.question)">
         <span>#01</span>
       </div>
       <div class="tile bg-one" data-question="2" onclick="showQuestion(this.dataset.question)">
@@ -41,30 +41,31 @@
       </div>
       <div class="tile bg-one" data-question="4" onclick="showQuestion(this.dataset.question)">
         <span>#04</span>
+      </div>-->
+      <div class="tile bg-one" data-question="1" onclick="showQuestion(this.dataset.question)">
+        <span>#01</span>
       </div>
-      <div class="tile bg-one" data-question="5" onclick="showQuestion(this.dataset.question)">
+      <div class="tile bg-one" data-question="2" onclick="showQuestion(this.dataset.question)">
+        <span>#02</span>
+      </div>
+      <div class="tile bg-two" data-question="3" onclick="showQuestion(this.dataset.question)">
+        <span>#03</span>
+      </div>
+      <div class="tile bg-one" data-question="4" onclick="showQuestion(this.dataset.question)">
+        <span>#04</span>
+      </div>
+      <div class="tile bg-two" data-question="5" onclick="showQuestion(this.dataset.question)">
         <span>#05</span>
       </div>
-      <div class="tile bg-two" data-question="6" onclick="showQuestion(this.dataset.question)">
+      <div class="tile bg-one" data-question="6" onclick="showQuestion(this.dataset.question)">
         <span>#06</span>
       </div>
-      <div class="tile bg-one" data-question="7" onclick="showQuestion(this.dataset.question)">
+      <div class="tile bg-two" data-question="7" onclick="showQuestion(this.dataset.question)">
         <span>#07</span>
       </div>
-      <div class="tile bg-one" data-question="8" onclick="showQuestion(this.dataset.question)">
+      <div class="tile bg-two" data-question="8" onclick="showQuestion(this.dataset.question)">
         <span>#08</span>
       </div>
-      <div class="tile bg-two" data-question="9" onclick="showQuestion(this.dataset.question)">
-        <span>#09</span>
-      </div>
-      <div class="tile bg-two" data-question="10" onclick="showQuestion(this.dataset.question)">
-        <span>#10</span>
-      </div>
-      <div class="tile bg-two" data-question="11" onclick="showQuestion(this.dataset.question)">
-        <span>#11</span>
-      </div>
-      <div class="tile bg-two" data-question="12" onclick="showQuestion(this.dataset.question)">
-        <span>#12</span>
       </div>
     </div>
 
