heatmap backend integration

--- a/mapa/mapa.html
+++ b/mapa/mapa.html
@@ -26,6 +26,7 @@
         <span id="stats"></span>
       </span>
       <button onclick="toggleHeatmap()">Mapa de Calor</button>
+      <button onclick="toggleMarkers()">Marcadores</button>
     </div>
 
     <div id="map"></div>
