adding Open-Graph Standard support

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Dengue" />
+  <meta property="og:url" content="http://181.47.98.140/dengue-frontend/" />
   <meta property="og:description" content="Auto-Test, Hospitales, Mapa de Calor, Noticias, Prevención, y más..." />
-  <meta property="og:url" content="http://181.47.98.140/dengue-frontend/index.html" />
   <meta property="og:image" content="http://181.47.98.140/dengue-frontend/resources/img/icon.png" />
   <meta property="og:type" content="website" />
+  <meta property="og:locale" content="es_AR" />
   <meta http-equiv = "refresh" content = "0; url = home/index.html" />
   <title>Dengue</title>
+  <link rel="icon" type="image/png" href="/resources/img/icon.png">
 </head>
 
 <body>
