--- a/home/index.html
+++ b/home/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:site_name" content="Dengue" />
   <meta property="og:title" content="Dengue" />
+  <meta property="og:url" content="http://181.47.98.140/dengue-frontend/" />
   <meta property="og:description" content="Auto-Test, Hospitales, Mapa de Calor, Noticias, Prevención, y más..." />
   <meta property="og:image" content="http://181.47.98.140/dengue-frontend/resources/img/icon.png" />
-  <meta property="og:url" content="http://181.47.98.140/dengue-frontend/index.html" />
   <meta property="og:type" content="website" />
+  <meta property="og:locale" content="es_AR" />
   <title>Dengue</title>
+  <link rel="icon" type="image/png" href="../resources/img/icon.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="../resources/css/styles.css">
