--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Dengue" />
-  <meta property="og:url" content="http://181.47.98.140/dengue-frontend/" />
+  <meta property="og:url" content="http://181.47.98.140/dengue-frontend/home/" />
   <meta property="og:description" content="Auto-Test, Hospitales, Mapa de Calor, Noticias, Prevención, y más..." />
   <meta property="og:image" content="http://181.47.98.140/dengue-frontend/resources/img/icon.png" />
   <meta property="og:type" content="website" />
